k8s/media-services/glance/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: media-services
  labels:
    app: glance
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: glance
